# Testing

./: .gitignore  .gitmodules  README.md  test.css  test.html  test.js
Projects/BookManagementSystem/: BookManagement.cpp  CMakeLists.txt  README.md
Projects/BookManagementSystem/Admin/: Admin.cpp
Projects/BookManagementSystem/Books/: CMakeLists.txt  books.cpp
Projects/BookManagementSystem/Books/Book/: CMakeLists.txt  book.cpp
Projects/Sudoku/: CMakeLists.txt  Sudoku.cpp
Projects/TrialCmake/: Application.cpp  CMakeLists.txt  Config.h.in
Projects/TrialCmake/MathLib/: CMakeLists.txt  mathLib.cpp  mathLib.h
Projects/TrialCmake/People/: CMakeLists.txt  People.cpp
Projects/TrialCmake/Shape/: CMakeLists.txt  Shape.cpp
test1/: float & position ele.html  float.html  style.css  test.html
