CMAKE_MINIMUM_REQUIRED(VERSION 3.27.4)

PROJECT(BookManagement)

ADD_EXECUTABLE(BookManagement BookManagement.cpp)

ADD_SUBDIRECTORY(Books)

TARGET_INCLUDE_DIRECTORIES(BookManagement PUBLIC BOOKS)

TARGET_LINK_DIRECTORIES(BookManagement PUBLIC BOOKS)

TARGET_LINK_LIBRARIES(BookManagement PUBLIC BOOKS)