CMAKE_MINIMUM_REQUIRED(VERSION 3.27.4)

PROJECT(SimpleApplication)

ADD_EXECUTABLE(SimpleApplication Application.cpp)

ADD_SUBDIRECTORY(MathLib)

ADD_SUBDIRECTORY(external/glfw)

ADD_SUBDIRECTORY(People)

ADD_SUBDIRECTORY(Shape)

TARGET_INCLUDE_DIRECTORIES(SimpleApplication 
PUBLIC MathLib
PUBLIC external/glfw/include
PUBLIC People
PUBLIC Shape
)

TARGET_LINK_DIRECTORIES(SimpleApplication 
PUBLIC MathLib
PUBLIC external/glfw/src
PUBLIC People
PUBLIC Shape
)

TARGET_LINK_LIBRARIES(SimpleApplication 
PUBLIC MathLib
PUBLIC glfw
PUBLIC PEOPLE
PUBLIC SHAPES
)